# cs2-technical-test-server

./: README.md  car_database.db  main.py  pyproject.toml
app/: __init__.py  models.py  schemas.py  service.py
app/scripts/: db_insert_fake_data.py  init_db.py
tests/: test_service.py
