[project]
name = "cs2-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Natalia",email = "dev.nataliaps@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "faker (>=37.4.0,<38.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
